[style] fix z-index

--- a/src/docs/core.less
+++ b/src/docs/core.less
@@ -166,7 +166,7 @@ nav {
     right: 10px;
     top: 70px;
     display: none;
-    z-index: 9999999;
+    z-index: 999998;
     &.show {
       display: block;
     }
